2005-06-22  Kalpit Desai <kvdesai@email.unc.edu>
	* clean.m: Now passes along the original time-stamp field.
2005-01-11  Kalpit Desai <kvdesai@email.unc.edu>
	* simlissajous.m: Previous commit was accidentally from wrong directory, This commit has correct coordinate frame.
2005-01-10  Kalpit Desai <kvdesai@email.unc.edu>
	* simlissajous.m: Now has pole locations in real-space (i.e. lab-coordinate frame) instead of aligned with X,Y,Z axis.

2004-10-24  Jeremy Cribb <jcribb@email.unc.edu>
	* removed Bforce.m, fmatrix.m, and tetra.m.  These files are used to simulate the forces via a monopole approximation.  Moved them to a new folder in 'magnets' called 'simforces'

2004-07-21  Kalpit Desai <kvdesai@cs.unc.edu>
	* clean.m: Changed the output structure of cleaned file, so that field names are not ambiguous with the non-cleaned input fields.
2004-07-16  Kalpit Desai <kvdesai@cs.unc.edu>
	* neutnorm.m: Changed the method of normalization. Now, normalize the excitation in such a way the 'normalized' excitation will give highest magnitude of force in the same direction as the 'un-normalized' or input excitation.
2004-07-13  Kalpit Desai <kvdesai@cs.unc.edu>
	* added neutnorm.m: Does the neutralization and normalization of magnet excitation vectors.
2004-07-13  Kalpit Desai <kvdesai@cs.unc.edu>
	* simlissajous.m: Fixed the pole location calculation for 6 pole geometry in stage coordinate system.
2004-06-11  Kalpit Desai <kvdesai@cs.unc.edu>
	* Initial Version. Added files: simlissajous.m, Bforce.m, clean.m, fmatrix.m, tetra.m, coils2pole.m and folder 'sphere'