@@ -1,3 +1,5 @@
+2005-07-19  Kalpit Desai <kvdesai@email.unc.edu>
+	* simlissajous.m: added option (hard coded) for simulations with three pole co-planar geometry.
 2005-06-22  Kalpit Desai <kvdesai@email.unc.edu>
 	* clean.m: Now passes along the original time-stamp field.
 2005-01-11  Kalpit Desai <kvdesai@email.unc.edu>
